# robot4ws_mapping

./: CMakeLists.txt  README.md  package.xml
config/: archimede_gridmap.yaml  costmap_2d.yaml  costmap_2d_archimede.yaml
include/robot4ws_mapping/: utilities.hpp
launch/: grid_map.launch  grid_map_all_in.launch  grid_map_base.launch  link_state_to_odom.launch
msg/: GridMapUpdateMsg.msg
rviz/: grid_map.rviz
src/: cloud_filter_node.cpp  color_detection_node.cpp  elevation_node.cpp  gridmap_node.cpp  link_states_to_odom_node.cpp  multi_layer_map_node.cpp  obstacles_node.cpp  slip_node.cpp  surface_orientation_node.cpp
srv/: get_surface_normal.srv
