<?xml version="1.0"?>
<package format="2">
  <name>robot4ws_mapping</name>
  <version>1.0.0</version>
  <description>The robot4ws_mapping package</description>

  <author email="davidepanarella.ts@gmail.com">Davide Panarella</author>
  <author email="simone.cottiga@phd.units.it">Simone Cottiga</author>

  <maintainer email="davidepanarella.ts@gmail.com">Davide Panarella</maintainer>
  <maintainer email="simone.cottiga@phd.units.it">Simone Cottiga</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
